crates/vexor-compiler/tests/golden/error/input/keyword_as_ident.vx
-- match is a keyword
val match = 100
export Circle(match)
